--- a/css/estilo.css
+++ b/css/estilo.css
@@ -2,3 +2,78 @@
 	margin: 0px;
 	padding: 0px;
 }
+
+body{
+	font-size: 16px;
+}
+
+/*Editando la cabecera*/
+header{
+    width: 100%;
+    background-color: rgba(0,0,0,.5);
+    overflow: hidden;
+    position: absolute;
+}
+
+header .encabezado{
+    width: 90%;
+    margin: 0px auto;
+    color: #fff;
+    overflow: hidden;
+}
+
+header .encabezado h3{
+    font-size: 1.4em;
+    line-height: 90px;
+    float: left;
+}
+
+header .encabezado nav{
+    float: right;
+    line-height: 90px;
+    display: inline-block;
+}
+
+header .encabezado nav ul{
+    
+}
+
+header .encabezado nav ul li{
+    display: inline-block;
+    padding: 0px .8em 0px 0px;
+}
+header .encabezado nav ul li a{
+    color: #fff;
+    text-decoration: none;
+    padding: .4em .4em;
+    border-radius: .2em;
+    transition: all 500ms ease;
+}
+
+header .encabezado nav ul li a:hover{
+    color: #fff;
+    padding: .4em .4em;
+    transition: all .2s;
+    border-radius: .1em;
+    background-color: #f05f40;
+}
+
+
+/*Editando la entrada*/
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
