--- a/css/estilo.css
+++ b/css/estilo.css
@@ -216,7 +216,25 @@ footer span{
     }
 }
 
+/*media queri para el bloque portafolio*/
 
+@media(min-width:720px){
+    .portafolio .portafolios{
+        overflow: hidden;
+    }
+}
+
+
+@media(min-width:720px){
+    .portafolio .portafolios img{
+        width: 33.3%;
+        float: left;
+        box-sizing: border-box;
+        padding: 0px 1em 0px 1em;
+        box-sizing: border-box;
+        
+    }
+}
 
 
 
